--- a/public/global.css
+++ b/public/global.css
@@ -1,17 +1,15 @@
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
-}
-
-body {
-	color: #333;
+*{
+	padding: 0;
 	margin: 0;
-	padding: 8px;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
+body{
+	color: #333;
+	padding: 24px;
+	min-height: 100vh ;
+}
 a {
 	color: rgb(0,100,200);
 	text-decoration: none;
@@ -35,7 +33,6 @@ input, button, select, textarea {
 	-webkit-padding: 0.4em 0;
 	padding: 0.4em;
 	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
 	border: 1px solid #ccc;
 	border-radius: 2px;
 }
@@ -62,7 +59,11 @@ button:focus {
 	border-color: #666;
 }
 
-/* extra styles */
-body{
-	padding: 0px;
-}
+ /* extras */
+
+ *{
+	box-sizing: border-box;
+ }
+ body{
+	min-height: 100vh;
+ }
